--- a/teste/style.css
+++ b/teste/style.css
@@ -15,16 +15,16 @@ padding:0;
 font-size:18px;
 }
 .active{
-color:red;
+color:rgb(21, 255, 0);
 }
 fieldset{
 display:none;
-width: 350px;
+width: 100%;
 padding:20px;
 margin-top:50px;
 margin-left: 85px;
 border-radius:5px;
-box-shadow: 3px 3px 25px 1px gray;
+box-shadow: 3px 3px 25px 1px black;
 }
 #first{
 display:block;
