--- a/style.css
+++ b/style.css
@@ -47,8 +47,18 @@ text-align:center;
 font-family: sans-serif;
 }
 li{
-margin-right:52px;
+margin-right:20px;
 display:inline;
 color:#c1c5cc;
 
+}
+footer{
+    width:100%;
+    margin-top:3%;
+    padding:50px;
+    height: 100%;
+    color:#ebebeb;
+    text-align:center;
+    float:left;
+    background:linear-gradient(to right,#44c933,#21f804);
 }
